@@ -55,32 +55,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="comboBox_temp">
-       <item>
-        <property name="text">
-         <string>Configuration</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Feature</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Manual</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Medium</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="comboBox_medium">
        <property name="currentIndex">
@@ -113,17 +87,10 @@
        </item>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_8">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>Viscosity</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_temp">
-       <property name="text">
-        <string>Temperature</string>
+        <string>Medium</string>
        </property>
       </widget>
      </item>
@@ -140,16 +107,6 @@
        </property>
       </spacer>
      </item>
-     <item row="2" column="2">
-      <widget class="DoubleSpinBoxNan" name="doubleSpinBox_visc">
-       <property name="showGroupSeparator" stdset="0">
-        <bool>false</bool>
-       </property>
-       <property name="suffix">
-        <string> mPa·s</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="1">
       <widget class="QComboBox" name="comboBox_visc_model">
        <item>
@@ -163,6 +120,59 @@
         </property>
        </item>
       </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="comboBox_temp">
+       <item>
+        <property name="text">
+         <string>Configuration</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Feature</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Manual</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Viscosity</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_temp">
+       <property name="text">
+        <string>Temperature</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="DoubleSpinBoxNan" name="doubleSpinBox_visc">
+       <property name="showGroupSeparator" stdset="0">
+        <bool>false</bool>
+       </property>
+       <property name="suffix">
+        <string> mPa·s</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Look-up table</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QComboBox" name="comboBox_lut"/>
      </item>
     </layout>
    </item>
